:bug: Fix height related layout issue on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   background-color: var(--color-primary);
   color: var(--color-secondary);
 }
@@ -26,6 +26,6 @@ body {
 
 @media (min-width: 720px) {
   .content {
-    padding: 0 1em 0 1em;
+    margin: 0 1em;
   }
 }
